--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -65,13 +65,11 @@
         </div>
         <div role="tabpanel" class="tab-pane" id="RawSQL">
             <div style="padding: 15px;">
-                Yes! You can run raw SQL <br/><br/>
+                Yes! You can run raw SQL! <a href="/DatabaseDiagram.png">Click here</a> to see the database diagram <br/><br/>
                 <b>Server:</b> soclosevotetracker.database.windows.net,1433<br/>
                 <b>Username:</b> SOCVRReadonly<br/>
                 <b>Password:</b> 30QITGxS69dpd6aPRlr5mb7pkMvtAv<br/>
                 <b>ADO.NET connection string:</b><br/> Server=tcp:soclosevotetracker.database.windows.net,1433;Database=SOCloseVoteTrackerDB;User ID=SOCVRReadonly;Password=30QITGxS69dpd6aPRlr5mb7pkMvtAv;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;<br/>
-
-                <a href="/DatabaseDiagram.png">Click here</a> to see the database diagram
             </div>
 
             <textarea id="txtSql" style="width: 100%; height: 600px">Insert your SQL here</textarea>
