Usability fix for question links

--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -195,7 +195,7 @@ ORDER BY COUNT(*) DESC</textarea>
                 var headerName = headers[j];
                 var dataItem = data[i][headerName];
                 if (headerName.toLowerCase() === 'questionid') {
-                    htmlRow.append('<td><a href="http://soclosevotetracker.azurewebsites.net/home/EnqueueAndRedirect?questionId=' + dataItem + '">' + dataItem + '</a></td>');
+                    htmlRow.append('<td><a target="_blank" href="http://soclosevotetracker.azurewebsites.net/home/EnqueueAndRedirect?questionId=' + dataItem + '">' + dataItem + '</a></td>');
                 } else {
                     htmlRow.append('<td>' + dataItem + "</td>");
                 }
