--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -21,13 +21,13 @@
         }
 
         #cover {
-    background: url("http://www.aveva.com/Images/ajax-loader.gif") no-repeat scroll center center #FFF;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-}
-
+            background: url("http://www.aveva.com/Images/ajax-loader.gif") no-repeat scroll center center #FFF;
+            position: absolute;
+            height: 100%;
+            width: 100%;
+        }
     </style>
+    <title>SOCloseVoteTracker 1.1</title>
 </head>
 <body>
 
