--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -1,5 +1,18 @@
-﻿@{
+﻿@using WebUI.Controllers
+@model HomeController.SearchQuery
+@{
     Layout = null;
+    var actualModel = Model ?? new HomeController.SearchQuery
+    {
+        TagSearchType = 1,
+        Closed = 1,
+        CloseReason = 0,
+        Deleted = 1,
+        HasReview = 0,
+        TagSearch = string.Empty,
+        VoteCount = 4,
+        VoteCountCompare = 1
+    };
 }
 
 <html>
@@ -31,7 +44,7 @@
 </head>
 <body>
 
-    <div id="cover" style="display: none; z-index: 999"></div>
+    <div id="cover" style="z-index: 999"></div>
     <div id="topContainer" class="container" style="margin-top: 20px">
     <a style="float: right;" href="https://github.com/rjrudman/SOCloseVoteTracker">
         <svg height="28" version="1.1" viewBox="0 0 16 16" width="28"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59 0.4 0.07 0.55-0.17 0.55-0.38 0-0.19-0.01-0.82-0.01-1.49-2.01 0.37-2.53-0.49-2.69-0.94-0.09-0.23-0.48-0.94-0.82-1.13-0.28-0.15-0.68-0.52-0.01-0.53 0.63-0.01 1.08 0.58 1.23 0.82 0.72 1.21 1.87 0.87 2.33 0.66 0.07-0.52 0.28-0.87 0.51-1.07-1.78-0.2-3.64-0.89-3.64-3.95 0-0.87 0.31-1.59 0.82-2.15-0.08-0.2-0.36-1.02 0.08-2.12 0 0 0.67-0.21 2.2 0.82 0.64-0.18 1.32-0.27 2-0.27 0.68 0 1.36 0.09 2 0.27 1.53-1.04 2.2-0.82 2.2-0.82 0.44 1.1 0.16 1.92 0.08 2.12 0.51 0.56 0.82 1.27 0.82 2.15 0 3.07-1.87 3.75-3.65 3.95 0.29 0.25 0.54 0.73 0.54 1.48 0 1.07-0.01 1.93-0.01 2.2 0 0.21 0.15 0.46 0.55 0.38C13.71 14.53 16 11.53 16 8 16 3.58 12.42 0 8 0z"></path></svg>
@@ -47,9 +60,10 @@
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="Interface">
             <div class="options">
+                <a id="idHardLink" style="float: right;margin-top: 15px;" href="javascript:void(0);">PermaLink Filter</a>
                 <div class="optionItem">
                     <label class="filterName">Tags</label>
-                    <input id="txtTags" type="text"/>
+                    <input id="txtTags" type="text" value="@actualModel.TagSearch"/>
                     <div id="tags" class="btn-group" data-toggle="buttons"></div>
                 </div>
                 <div class="optionItem">
@@ -78,7 +92,6 @@
 
                 <br/>
                 <button id="submit" type="submit" class="btn btn-default">Submit</button>
-
                 <table id="simpleTable" class="table"></table>
             </div>
         </div>
@@ -100,7 +113,6 @@ GROUP BY Questions.Id, Questions.Title,Questions.LastUpdated,Questions.Closed
 ORDER BY COUNT(*) DESC</textarea>
 
             <button id="submitSql" type="submit" class="btn btn-default">Submit</button>
-
             <table id="dynamicTable" class="table"></table>
         </div>
     </div>
@@ -111,54 +123,54 @@ ORDER BY COUNT(*) DESC</textarea>
 <script type="text/javascript">
     $(function() {
         var tags = [
-            { Value: 1, Text: 'Any Tags', Default: true },
+            { Value: 1, Text: 'Any Tags' },
             { Value: 2, Text: 'All Tags' }
         ];
-        fillOptions($('#tags'), 'tags', tags);
+        fillOptions($('#tags'), 'tags', tags, @actualModel.TagSearchType);
 
         var hasreview = [
 { Value: 1, Text: 'No' },
 { Value: 2, Text: 'Yes' },
-{ Value: 0, Text: 'Any', Default: true }
+{ Value: 0, Text: 'Any' }
         ];
-        fillOptions($('#hasreview'), 'hasreview', hasreview);
+        fillOptions($('#hasreview'), 'hasreview', hasreview, @actualModel.HasReview);
 
         var deleted = [
-    { Value: 1, Text: 'No', Default: true },
+    { Value: 1, Text: 'No' },
     { Value: 2, Text: 'Yes' },
     { Value: 0, Text: 'Any' }
         ];
-        fillOptions($('#deleted'), 'deleted', deleted);
+        fillOptions($('#deleted'), 'deleted', deleted, @actualModel.Deleted);
 
         var closed = [
-            { Value: 1, Text: 'No', Default: true },
+            { Value: 1, Text: 'No' },
             { Value: 2, Text: 'Yes' },
             { Value: 0, Text: 'Any' }
         ];
-        fillOptions($('#closed'), 'closed', closed);
+        fillOptions($('#closed'), 'closed', closed, @actualModel.Closed);
 
         var voteCount = [
             { Value: 0, Text: '0' },
             { Value: 1, Text: '1' },
             { Value: 2, Text: '2' },
             { Value: 3, Text: '3' },
-            { Value: 4, Text: '4', Default: true },
+            { Value: 4, Text: '4' },
             { Value: 5, Text: '5' }
         ];
-        fillOptions($('#voteCount'), 'voteCount', voteCount);
+        fillOptions($('#voteCount'), 'voteCount', voteCount, @actualModel.VoteCount);
 
         var voteCountCompare = [
-            { Value: 1, Text: '==', Default: true },
+            { Value: 1, Text: '==' },
             { Value: 2, Text: '!=' },
             { Value: 3, Text: '<' },
             { Value: 4, Text: '<=' },
             { Value: 5, Text: '>' },
             { Value: 6, Text: '>=' }
         ];
-        fillOptions($('#voteCountCompare'), 'voteCountCompare', voteCountCompare);
+        fillOptions($('#voteCountCompare'), 'voteCountCompare', voteCountCompare, @actualModel.VoteCountCompare);
 
         var closeReasons = [
-            { Value: 0, Text: 'Any', Default: true },
+            { Value: 0, Text: 'Any' },
             { Value: 1000, Text: 'Duplicate' },
             { Value: 1001, Text: 'Unclear' },
             { Value: 1002, Text: 'Broad' },
@@ -171,24 +183,37 @@ ORDER BY COUNT(*) DESC</textarea>
             { Value: 2, Text: 'Migration' },
             { Value: 3, Text: 'Other' }
         ];
-        fillOptions($('#closeReasonGroup'), 'closeReason', closeReasons);
+        fillOptions($('#closeReasonGroup'), 'closeReason', closeReasons, @actualModel.CloseReason);
 
         $('#submit').click(makeRequest);
         $('#submitSql').click(makeSqlRequest);
+
+        $('#idHardLink').click(function() {
+            var filterData = getDataFilter();
+            var p = $.param(filterData);
+            window.location = '/Home/PermaLink?' + p;
+        });
+
+        $('#cover').hide();
+
+        @if (actualModel.ImmediatelyQuery)
+        {
+            <text>$('#submit').click();</text>
+        }
     });
 
-    function fillOptions(group, groupName, options) {
-
+    function fillOptions(group, groupName, options, defaultValue) {
         group.empty();
         for (var i = 0; i < options.length; i++) {
             var option = options[i];
             var value = option.Value;
             var text = option.Text;
-            var defaultSelected = option.Default;
+            var defaultSelected = option.Value === defaultValue;
 
             var element = $('<label class="btn btn-primary ' + (defaultSelected ? 'active' : '') + '"> <input type="radio" name="' + groupName + '" value="' + value + '" autocomplete="off" ' + (defaultSelected ? 'checked' : '') + '>' + text + '</label>');
             group.append(element);
         }
+        return group;
     }
 
     function renderTable(table, data) {
@@ -245,7 +270,7 @@ ORDER BY COUNT(*) DESC</textarea>
         table.append(body);
     }
 
-    function makeRequest() {
+    function getDataFilter() {
         var tags = $('#txtTags').val();
         var tagSearchType = $('[name="tags"]:checked').val();
 
@@ -268,6 +293,11 @@ ORDER BY COUNT(*) DESC</textarea>
             VoteCountCompare: voteCountCompare,
             CloseReason: closeReason
         };
+        return requestData;
+    }
+
+    function makeRequest() {
+        var requestData = getDataFilter();
         showLoading();
         $.post('/Home/SearchData', requestData, function(results) {
             renderTable($('#simpleTable'), results);
@@ -297,7 +327,7 @@ ORDER BY COUNT(*) DESC</textarea>
         $('#cover').fadeIn();
     }
     function hideLoading() {
-        
+
         $('#cover').fadeOut(function () { $('#topContainer').show(); });
     }
 
