--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -249,7 +249,7 @@ ORDER BY COUNT(*) DESC</textarea>
         for (i = 0; i < headers.length; i++) {
             if (headers[i].toLowerCase() === 'tags') {
                 headRow.append('<td>' + headers[i] + '</td>');
-            }else {
+            } else {
                 headRow.append('<td class="sortableTableHeader">' + headers[i] + '</td>');
             }
         }
@@ -383,10 +383,21 @@ ORDER BY COUNT(*) DESC</textarea>
         $('#topContainer').hide();
         $('#cover').fadeIn();
     }
+
     function hideLoading() {
-        $('#cover').fadeOut(function () { $('#topContainer').show(); });
+        $('#cover').fadeOut(function() { $('#topContainer').show(); });
     }
 
 </script>
+    <script type="text/javascript">
+  var appInsights=window.appInsights||function(config){
+    function r(config){t[config]=function(){var i=arguments;t.queue.push(function(){t[config].apply(t,i)})}}var t={config:config},u=document,e=window,o="script",s=u.createElement(o),i,f;for(s.src=config.url||"//az416426.vo.msecnd.net/scripts/a/ai.0.js",u.getElementsByTagName(o)[0].parentNode.appendChild(s),t.cookie=u.cookie,t.queue=[],i=["Event","Exception","Metric","PageView","Trace"];i.length;)r("track"+i.pop());return r("setAuthenticatedUserContext"),r("clearAuthenticatedUserContext"),config.disableExceptionTracking||(i="onerror",r("_"+i),f=e[i],e[i]=function(config,r,u,e,o){var s=f&&f(config,r,u,e,o);return s!==!0&&t["_"+i](config,r,u,e,o),s}),t
+    }({
+        instrumentationKey:"d9c9c00d-3ead-4a25-a477-57b8ede83acd"
+    });
+
+    window.appInsights=appInsights;
+    appInsights.trackPageView();
+    </script>
 </body>
 </html>
