Default to ordering by last active time

--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     Layout = null;
     var actualModel = Model ?? new HomeController.SearchQuery
     {
+        SortAsc = "LastTimeActive",
         TagSearchType = 1,
         Closed = 1,
         CloseReason = 0,
