Styling fix thanks to Ferrybig

--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -46,10 +46,10 @@
             cursor: pointer;
         }
         .sortAsc::after {
-            content: ' ▲'
+            content: '\00a0▲'
         }
         .sortDesc::after {
-            content: ' ▼'
+            content: '\00a0▼'
         }
     </style>
     <title>SOCloseVoteTracker 1.1</title>
